1. Add vs Area 2. Add opponent logic 3. Change the background vps update method 4. More candidates added

--- a/Config/Localization/Game_Gather.ini
+++ b/Config/Localization/Game_Gather.ini
@@ -8,6 +8,7 @@ ArchiveName=Game.archive
 NativeCulture=en
 CulturesToGenerate=en
 CulturesToGenerate=ms
+CulturesToGenerate=zh-SG
 
 [GatherTextStep0]
 CommandletClass=GatherTextFromSource
